...
            let alertAdd = UIAlertController(title: "Add Location", message: "City, ST format", preferredStyle: .alert)
            
            alertAdd.addTextField { (textField) in
                textField.placeholder = "City, ST"
            }
            
            let actionOk = UIAlertAction(title: "Ok", style: .default) {  (action) in
                
                if let cityState = alertAdd.textFields?.first?.text {
                    strongSelf.insertNewObject(cityState)
                }
            }
            
...
